opam-version: "2.0"
maintainer: "brian@tqgroup.io"
authors: ["Brian Guo"]
homepage: "https://github.com/BrianGuo/MichelsonExecutionEngine"
bug-reports: "https://github.com/BrianGuo/MichelsonExecutionEngine/issues"
doc: "https://github.com/BrianGuo/MichelsonExecutionEngine/wiki"
name: "tezos_execution_engine"
build: [
  ["dune" "build" "-p" "tezos-crypto,tezos-data-encoding,tezos-error-monad,tezos-stdlib,tezos-micheline,tezos_execution_engine"]
]
depends: [
  "ocaml" {= "4.06.1"}
  "dune" {build}
  "base"
  "bignum"
  "bigstring"
  "cohttp-lwt-unix"
  "cstruct"
  "ezjsonm"
  "hex"
  "js_of_ocaml"
  "lwt" {= "3.3.0"}
  "lwt_log"
  "ocplib-endian"
  "ocplib-json-typed"
  "re"
  "stdio"
  "uri"
  "uutf"
  "zarith"
]

synopsis:
    "An Execution Engine for executing Michelson smart contracts in OCaml"
