opam-version: "2.0"
maintainer: "brian@tqgroup.io"
authors: ["Brian Guo"]
homepage: "https://github.com/BrianGuo/MichelsonExecutionEngine"
bug-reports: "https://github.com/BrianGuo/MichelsonExecutionEngine/issues"
doc: "https://github.com/BrianGuo/MichelsonExecutionEngine/wiki"
name: "tezos_execution_engine"
build: [
  ["dune" "build" "dependencies/vendors/ocaml-blake2"]
  ["dune" "build" "dependencies/vendors/ocaml-hacl"] 
  ["dune" "build" "dependencies/vendors/ocaml-secp256k1"]
  ["dune" "build" "dependencies/vendors/ocaml-uecc"]
  ["dune" "build" "dependencies/vendors/ocplib-json-typed"]
  ["dune" "build" "-p" "tezos-stdlib,tezos-crypto,tezos-error-monad,tezos-data-encoding,tezos-micheline,tezos_execution_engine"] 
]
depends: [
  "ocaml" {= "4.06.1"}
  "dune" {build}
  "base"
  "bignum"
  "bigstring"
  "cohttp-lwt-unix"
  "cstruct"
  "ezjsonm"
  "hex"
  "js_of_ocaml"
  "lwt" {= "3.3.0"}
  "lwt_log"
  "ocplib-endian"
  "ocplib-json-typed"
  "re"
  "stdio"
  "uri"
  "uutf"
  "zarith"
]

synopsis:
    "An Execution Engine for executing Michelson smart contracts in OCaml"
