(library
    (name lib)
    (public_name lib)
    (libraries lwt
                tezos-micheline
                tezos-error-monad
                tezos-stdlib
                tezos-data-encoding
                ocplib-json-typed
                cohttp-lwt-unix
                bignum.bigint
                tezos-crypto
                ))