(library
    (name tezos_execution_engine)
    (public_name tezos-execution-engine)
    (libraries lwt
                tezos-micheline
                tezos-error-monad
                tezos-stdlib
                tezos-data-encoding
                ocplib-json-typed
                cohttp-lwt-unix
                bignum.bigint
                tezos-crypto
                ))