(library
    (name util)
    (public_name util)
    (libraries lwt
                tezos-micheline
                tezos-error-monad
                tezos-stdlib
                tezos-data-encoding
                ocplib-json-typed
                cohttp-lwt-unix
                bignum.bigint
                tezos-crypto
                ))
